tests/NormalTests/paczka1/fuzzy1/98567530.err
Error in line 3: 3USj S654 65,9
Error in line 7: S728 S191 101,2
Error in line 17: 7b5 S728 0,5
Error in line 34: 7b5 S191 18,5
